--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,25 @@ cmake_minimum_required(VERSION 3.5)
 
 project(srvroadsignsrecognition)
 
-add_executable(srvroadsignsrecognition main.cpp)
+include_directories(AMQP SignDetector)
+set(SOURCES JSONBase.cpp FrameOptions.cpp CommandLine.cpp)
+set(HEADER_FILES AMQP/AMQPcpp.h SignDetector/SignDetector.h SignDetector/ImageConverter.h)
+
+add_executable(srvroadsignsrecognition main.cpp JSONBase.cpp FrameOptions.cpp CommandLine.cpp
+  SignDetector/SignDetector.h
+  SignDetector/SignDetector.cpp 
+  SignDetector/ImageConverter.h
+  SignDetector/ImageConverter.cpp
+  AMQP/AMQPcpp.h
+  AMQP/AMQPQueue.cpp
+  AMQP/AMQPMessage.cpp
+  AMQP/AMQPExchange.cpp
+  AMQP/AMQPException.cpp
+  AMQP/AMQPBase.cpp
+  AMQP/AMQP.cpp 
+)
+
+target_link_libraries(srvroadsignsrecognition rabbitmq.4.lib librabbitmq.4.lib )
 set_target_properties(srvroadsignsrecognition PROPERTIES CXX_STANDARD 17 CXX_STANDARD_REQUIRED ON)
 
 
